Main activity colors adjusted

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:text="@string/dress_me_app"
         android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
         android:textColor="#FFFFFF"
@@ -30,7 +30,7 @@
         android:layout_marginBottom="30dp"
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:text="@string/wardrobe"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
         android:textColor="#FFFFFF"
