--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:background="#fff538">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/DressMeAppButton"
         style="@android:style/Widget.Button"
         android:layout_width="280dp"
         android:layout_height="@android:dimen/app_icon_size"
@@ -19,12 +19,12 @@
         android:text="@string/dress_me_app"
         android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/WardrobeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/WardrobeButton"
         android:layout_width="280dp"
         android:layout_height="@android:dimen/app_icon_size"
         android:layout_marginBottom="30dp"
@@ -46,7 +46,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintBottom_toTopOf="@+id/DressMeAppButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
