--- a/app/src/main/res/layout/activity_wardrobe.xml
+++ b/app/src/main/res/layout/activity_wardrobe.xml
@@ -8,14 +8,13 @@
     tools:context="com.example.y2j2142.dressmeapp.activities.Wardrobe">
 
     <ListView
-        android:layout_width="368dp"
-        android:layout_height="551dp"
+        android:id="@+id/WardrobeListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:entries="@mipmap/ic_launcher"
-        android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
